# uddi_self_service_example

./: README.md  pyproject.toml  run_portal.py  uddi.ini.example  web_portal.py
src/uddi_self_service_example/: __init__.py  __main__.py  client.py  config.py  output.py  portal.py
templates/: _drilldown_space.html  _drilldown_subnet.html  _drilldown_view.html  _drilldown_zone.html  _opts.html  _overview.html  _records_table.html  _result.html  base.html  index.html
tests/: conftest.py  test_portal.py
